--- a/css/style.css
+++ b/css/style.css
@@ -42,12 +42,28 @@ h1 {
 .photographer_section article h2 {
     color: #D3573C;
     font-size: 36px;
+    margin:unset;
+}
+
+.photographer_section article h3{
+    color: #901C1C;
+    font-size: 13px;
+    margin:0px 3px ;
 }
 
 .photographer_section article img {
     height: 200px;
     width: 200px;
     border-radius: 50%;
+    object-fit: cover;
 }
 
+.photographer_section article p{
+margin:0px 3px; 
+}
 
+.photographer_section article a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
