--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,5 +1,39 @@
+body{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
 #contact_modal {
-    display: none;
+    display: none; 
+    
+}
+
+.contact_modal_on{
+    position: absolute;
+    left: 13px;
+    padding-top: 92px;
+    width: 100%;
+    height: 100%;
+    margin: unset;
+    backdrop-filter: contrast(0.5);
+}
+
+.contact_info{
+    display: flex;
+    padding-top: 40px;
+    flex-direction: column;
+}
+
+.contact_info h2{
+    font-size: 64px;
+    font-weight: normal;
+    margin: unset;
+    padding: unset;
+}
+.contact-form button{
+    margin-top: 3%;
+    align-self: flex-start;
 }
 
 #main{
@@ -50,6 +84,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-items: center;
+    margin-top: 5%;
 }
 
 .media-info{
@@ -119,13 +154,14 @@
 .modal {
     border-radius: 5px;
     background-color: #DB8876;
-    width: 50%;
+    width: 40%;
+    height: 35%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     padding: 35px;
-    margin: auto;
+    margin: auto;    
 }
 
 .modal header {
@@ -140,7 +176,12 @@
 .modal header h2 {
     font-size: 64px;
     font-weight: normal;
-    text-align: center;
+}
+
+.text-area{
+    width: 100%;
+    height: 40%;
+    border-radius: 5px;     
 }
 
 form {
@@ -169,3 +210,11 @@ form input {
     border: none;
     border-radius: 5px;
 }
+
+/* CSS for the lightbox */
+.lightbox{
+    display: none;
+    width: 200px;
+    border: solid black 2px;
+    background-color: red;
+} 
