--- a/css/photographer.css
+++ b/css/photographer.css
@@ -266,3 +266,9 @@ form input {
    color: white; 
    height: 42px;
 }
+
+.media-likes{
+    cursor: pointer;
+    display: flex;
+    gap: 5px;
+}
