--- a/css/photographer.css
+++ b/css/photographer.css
@@ -229,6 +229,7 @@ form input {
 .media{
     display: flex;
     justify-content: center;
+    flex-direction: column;
         
 }
 .lightbox-img{
@@ -316,4 +317,10 @@ form input {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+}
+
+.media-title{
+    color: #901C1C;
+    font-size: 24px;
+    font-weight: 400;
 }
